--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
  <body>
  <h1>Welcome to The World Of Devops</h1>
- <p>My First Project in Harman Limited</p>
+ <p>My First Project in Harman Limited my company</p>
  </body>
 </html>
