--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <h2>Welcome to The World Of Team</h2>
  <p>My First Project in Harman Limited my company</p>
  <p>My First Project in Harman Limited my company</p>
-  <p>My name is nagarjuna</p>
+  <p>My name is Arjun</p>
  </body>
 </html>
