--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <h2>Welcome to The World Of Team</h2>
  <p>My First Project in Harman Limited my company</p>
  <p>My First Project in Harman Limited my company</p>
-  <p>My name is Nagarjun</p>
-    <p>I am living in banglore</p>
+  <p>My name is Nagarjuna</p>
+    <p>I am living in karnataka</p>
  </body>
 </html>
