--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
  <body>
  <h1>Welcome to The World Of Devops</h1>
+  <h2>Welcome to new employess</h2>
  <p>My First Project in Harman Limited my company</p>
+  <p> My Second project in Samsung</p>
  </body>
 </html>
