--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <p> My Second project in Samsung</p>
    <h1>Welcome to The World Of Devops</h1>
   <h2>Welcome to new employe surendra</h2>
+   <h1>Welcome to The World Of Devops</h1>
+  <h2>Welcome to new employe surendra</h2>
  </body>
 </html>
