--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
    <h1>Welcome to The World Of Devops</h1>
   <h2>Welcome to new employe surendra</h2>
    <h1>Welcome to The World Of Devops</h1>
+    <h2>Welcome to new employe surendra</h2>
+   <h1>Welcome to The World Of 3 Devops</h1>
  </body>
 </html>
