--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <p> My Second project in Samsung</p>
    <h1>Welcome to The World Of Devops</h1>
   <h2>Welcome to new employe Nagarjuna</h2>
-   <h1>Welcome to The World Of Devops</h1>
+   <h1>Welcome to The universe Of Devops</h1>
     <h2>Welcome to new employe surendra</h2>
   <h1>Welcome to The World Of 67 Devops</h1>
     <h1>Welcome to The World Of 89 Devops</h1>
