--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
    <h1>Welcome to The universe Of Devops</h1>
   <h1>Welcome to The World Of Devops</h1>
   <h2>Welcome to new 123456</h2>
-  <h2>Welcome to new 123456789</h2>
+  <h2>Welcome to new 19</h2>
   
-  <h2>Welcome to new 12345678910101</h2>
  </body>
 </html>
