--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <h2>Welcome to new employess</h2>
  <p>My First Project in Harman Limited my company</p>
   <p> My Second project in Samsung</p>
-   <h1>Welcome to The World Of Devops</h1>
+   <h1>Welcome to The cloud world</h1>
   <h2>Welcome to new employe Nagarjuna</h2>
    <h1>Welcome to The universe Of Devops</h1>
-  <h1>Welcome to The World Of Devops</h1>
+  <h1>Welcome to The My world</h1>
   <h2>Welcome to new 123456</h2>
-  <h1>Welcome to The World Of Devops</h1>
-  <h2>Welcome to new employe Nagarjuna</h2>
   
  </body>
 </html>
