--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <p> My Second project in Samsung</p>
    <h1>Welcome to The cloud world</h1>
   <h2>Welcome to new employe Nagarjuna</h2>
-  
+  <h2>Welcome to new employe Nagarjuna</h2>
  </body>
 </html>
