--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
  <body>
- <h1>Welcome to The World Of Devops</h1>
-  <h2>Welcome to new employess</h2>
- <p>My First Project in Harman Limited my company</p>
+ <h1>Welcome to The World Of DevOps</h1>
+  <h2>Welcome to new Employess</h2>
+ <p>My First Project in Harman Limited my Company</p>
   <p> My Second project in Samsung</p>
-   <h1>Welcome to The cloud world</h1>
+   <h1>Welcome to The Cloud World</h1>
   <h2>Welcome to new employe Nagarjuna</h2>
-  <h2>Welcome to new employe arjuna</h2>
+  
  </body>
 </html>
