--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
  <h1>Welcome to The World Of DevOps</h1>
   <h2>Welcome to new Employess</h2>
  <p>My First Project in Harman Limited my Company</p>
-  <p> My Second project in Samsung</p>
-   <h1>Welcome to The Cloud World</h1>
-  <h2>Welcome to new employe Nagarjuna</h2>
+  <p>Welcome to new employe Nagarjuna</p>
   
  </body>
 </html>
