--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
  <body>
  <h1>Welcome to The World Of DevOps</h1>
-  <h2>Welcome to new Employess</h2>
+  <h2>Welcome to our Employess</h2>
  <p>My First Project in Harman Limited my Company</p>
-  <p>Welcome to new employe Nagarjun</p>
+  <p>Welcome to new employe Arjun</p>
   
  </body>
 </html>
