--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
  <p>My First Project in Harman Limited my Company</p>
   <p>Welcome to new employe Nag</p>
   <h1>Welcome to The World Of Cloud DevOps</h1>
-  <h2>Welcome to our New Employess</h2>
-  <p>My First Project in Harman Limited Company</p>
-  <p>Welcome to new employe Nagarjuna</p>
+  <p>Welcome to new employe Nagarjuna123</p>
  </body>
 </html>
