--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <p>Welcome to new employe Nag</p>
   <h1>Welcome to The World Of Cloud DevOps</h1>
   <p>Welcome to new employe Nagarjuna@123</p>
-  <h2>Welcome to our All Employess</h2>
- <p>My First Project in Samsung Company</p>
- </body>
+  <h2>Welcome to our All employess</h2>
+  </body>
 </html>
