--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <h1>Welcome to The World Of Cloud DevOps</h1>
   <p>Welcome to new employe Nagarjuna@123</p>
   <h2>Welcome to our All employess</h2>
+  <p>Welcome to new employe Nagarjuna@123</p>
+  <h2>Welcome to our All employess</h2>
   </body>
 </html>
