--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
  <body>
  <h1>Welcome to The World Of DevOps</h1>
   <h2>Welcome to our Employess</h2>
- <p>My First Project in Harman Limited my Company</p>
-  <p>Welcome to new employe Nag</p>
-  <h1>Welcome to The World Of Cloud DevOps</h1>
-  <p>Welcome to new employe Nagarjuna@123</p>
-  <h2>Welcome to our All employess</h2>
+ <h3>Welcome to our journey</h3>
   <p>Welcome to new employe Nagarjuna@123</p>
     <p>Welcome to new employe Nagarjuna@123</p>
-  <h2>Welcome to our All employess</h2>
   </body>
 </html>
