--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <h2>Welcome to our Employess</h2>
  <h3>Welcome to our journey</h3>
   <p>Welcome to new employe Nagarjuna@123</p>
-    <p>Welcome to new employe Nagarjuna@123</p>
+    <p>Welcome to new employe Nag</p>
   </body>
 </html>
