--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <h2>Welcome to our Employess</h2>
   <h3>Welcome to our journey</h3>
     <p>Welcome to new employe Nagarjuna@12345</p>
-    <p>Welcome to new employe Nagarjuna</p>
-   <p>Welcome to new employe Nag</p>
-    <p>Welcome to new employe Nagarjuna@12345</p>
-    <p>Welcome to new employe Nagarjuna</p>
+    <p>Welcome to new employe arjuna</p>
+   <h2>Welcome to our system</h2>
   <p>Welcome to new employe surendra-Devops</p>
   </body>
 </html>
