--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
  <body>
  <h1>Welcome to The World Of DevOps</h1>
-  <h2>Welcome to our Employess</h2>
-  <h3>Welcome to our journey</h3>
-    <p>Welcome to new employe Nagarjuna@12345</p>
-    <p>Welcome to new employe arjuna</p>
-   <h2>Welcome to our system</h2>
+  <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
   </body>
 </html>
