--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
  <h1>Welcome to The World Of DevOps</h1>
   <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
-    <p>Welcome to new employe surendra-Devops</p>
+    <p>Welcome to new employe surendraas-Devops</p>
   </body>
 </html>
