--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
     <p>Welcome to new employe surendraas-Devops</p>
+  <p>Welcome to new employe surendraas-Devops</p>
+  <p>Welcome to new employe surendraas-Devops</p>
   </body>
 </html>
