--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,7 @@
   <p>Welcome to new employe surendraas-Devops</p>
   <p>Welcome to new employe surendraas-Devops</p>
     <p>Welcome to new employe Nagarjuna-Devops</p>
+  <p>Welcome to new employe chakri-Devops</p>
 
   </body>
 </html>
