--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
     <p>Welcome to new employe surendraas-Devops</p>
-  <p>Welcome to new employe surendraas-Devops</p>
-  <p>Welcome to new employe surendraas-Devops</p>
-    <p>Welcome to new employe Nagarjuna-Devops</p>
-  <p>Welcome to new employe chakri-Devops</p>
-    <p>Welcome to new employe chakri2Devops</p>
-
-
+  <p>Welcome to new employe anil-Devops</p>
+  <p>Welcome to new employe vijay-Devops</p>
+    <p>Welcome to new employe raju-Devops</p>
+  <p>Welcome to new employe chakri2Devops</p>
+  <p>Welcome to new employe 123456</p>
   </body>
 </html>
