--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <p>Welcome to new employe surendraas-Devops</p>
   <p>Welcome to new employe anil-Devops</p>
   <p>Welcome to new employe vijay-Devops</p>
-    <p>Welcome to new employe raju-Devops</p>
-  <p>Welcome to new employe chakri2Devops</p>
-  <p>Welcome to new employe 123456</p>
+    <p>Welcome to new employe 5000</p>
+  <h1>Welcome to The World</h1>
+  <h2>Welcome to our friends</h2>
   </body>
 </html>
