--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <p>Welcome to new employe vijay-Devops</p>
     <p>Welcome to new employe 5000</p>
   <h1>Welcome to The World</h1>
-  <h2>Welcome to our friends</h2>
+  <h2>Welcome to our friend0s-family</h2>
   </body>
 </html>
