--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>Welcome to new employe 5000</p>
   <h1>Welcome to The World</h1>
   <h2>Welcome to our friend0s-family</h2>
+      <p>Welcome to new employe 5000</p>
+  <h1>Welcome to The World</h1>
+  <h2>Welcome to our friend0s-family</h2>
   </body>
 </html>
