--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
  <h1>Welcome to The World Of DevOps</h1>
   <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
-    <p>Welcome to new employe surendraas-Devops</p>
-  <p>Welcome to new employe anil-Devops</p>
-  <p>Welcome to new employe vijay-Devops</p>
-    <p>Welcome to new employe 5000</p>
-  <h1>Welcome to The World</h1>
-  <h2>Welcome to our friend0s-family</h2>
-      <p>Welcome to new employe 5000</p>
-  <h1>Welcome to The World</h1>
-  <h2>Welcome to our friend0s-family</h2>
+    <p>Welcome to new employe veerendraas-Devops</p>
   </body>
 </html>
