--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <p>Welcome to new employe veerendraas-Devops</p>
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
+    <p>Welcome to new employe surendra-Devops</p>
+    <p>Welcome to new employe veerendraas-Devops</p>
+  <h1>Welcome to india</h1>
+  <p>Welcome to new lap </p>
   </body>
 </html>
