--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
     <p>Welcome to new employe surendra-Devops</p>
-    <p>Welcome to new employe veerendraas-Devops</p>
+    <p>Welcome to new employe surendraas-Devops</p>
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
   </body>
