--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <h1>Welcome to india</h1>
   <p>Welcome to new lap 23456789 </p>
     <p>Welcome to new lap 23456789 </p>
+    <p>Welcome to new lap 23456789 </p>
+    <p>Welcome to new lap 23456789 </p>
   </body>
 </html>
