--- a/index.html
+++ b/index.html
@@ -4,20 +4,10 @@
  <h1>Welcome to The World Of DevOps</h1>
   <h2>Welcome to our company</h2>
   <p>Welcome to new employe surendra-Devops</p>
-    <p>Welcome to new employe veerendraas-Devops</p>
+    <p>Welcome to new employe Nagarjuna-Devops</p>
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
-    <p>Welcome to new employe surendra-Devops</p>
-    <p>Welcome to new employe surendraas-Devops</p>
-  <h1>Welcome to india</h1>
-  <p>Welcome to new lap 23456789 </p>
-    <p>Welcome to new lap 23456789 </p>
-    <p>Welcome to new lap 23456789 </p>
-    <p>Welcome to new lap 23456789 </p>
-  <p>Welcome to new lap 23456789 </p>
-    <p>Welcome to new lap 23456789 </p>
-  <p>Welcome to new lap 23456789 </p>
-    <p>Welcome to new lap 23456789 abcdefgh </p>
+   <p>Welcome to new lap 23456789 </p>
    <h1>Welcome to The World Of DevOps</h1>
   </body>
 </html>
