--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <p>Welcome to new lap </p>
    <p>Welcome to new lap 23456789 </p>
    <h1>Welcome to The World Of DevOps</h1>
+  <p>Welcome to new lap </p>
+   <p>Welcome to new lap 23456789 </p>
+   <h1>Welcome to The World Of DevOps</h1>
   </body>
 </html>
