--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
    <p>Welcome to new lap 23456789 </p>
-   <h1>Welcome to The World Of DevOps</h1>
-  <p>Welcome to new lap </p>
    <p>Welcome to new lap 23456789 </p>
-   <h1>Welcome to The World Of DevOps</h1>
+  <p>Welcome to new lap 23456789 </p>
   </body>
 </html>
