--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <h1>Welcome to india</h1>
   <p>Welcome to new lap </p>
    <p>Welcome to new lap 23456789 </p>
-   <p>Welcome to new lap 23456789 </p>
-  <p>Welcome to new lap 23456789 </p>
+   <p>Welcome to new lap 23579 </p>
+  <p>Welcome to new lap 246810 </p>
+  <p>Welcome to new employe surendra-Devops</p>
+    <p>Welcome to new employe Nagarjuna-Devops</p>
   </body>
 </html>
